# sokobantron

./: .gitignore  CLAUDE.md  Cargo.toml
crates/sokoban-bevy/: Cargo.toml
crates/sokoban-bevy/src/: lib.rs
crates/sokoban-cli/: Cargo.toml
crates/sokoban-core/: Cargo.toml
crates/sokoban-core/src/: board.rs  graph.rs  level.rs  lib.rs
crates/sokoban-solver/: Cargo.toml
crates/sokoban-solver/src/: lib.rs
crates/sokoban-wasm/: Cargo.toml
crates/sokoban-wasm/src/: lib.rs
web/: package.json  vite.config.ts
web/src/: index.html  loader.ts
web/src/elements/: arena-builder.ts  example-states.ts  graph-explorer.ts  level-player-graph.ts  level-player-scc.ts
